--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,11 @@ services:
     networks:
       - app-network
     healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:5000/health"]
+      test: ["CMD", "curl", "-f", "http://localhost:5000/health"]
       timeout: 5s
       interval: 30s
-      retries: 3
-      start_period: 40s
+      retries: 5
+      start_period: 60s
 
   db:
     image: postgres:15-alpine
