--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,10 +37,11 @@ services:
     networks:
       - app-network
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U postgres -d nurmakon_hotel"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d nurmakon_hotel -h localhost"]
       interval: 10s
       timeout: 5s
       retries: 5
+
 
   nginx:
     image: nginx:alpine
