--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,6 +51,9 @@ services:
       - "443:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
+      - /etc/letsencrypt/live/nurmakonhotel.com/fullchain.pem:/etc/nginx/ssl/fullchain.pem:ro
+      - /etc/letsencrypt/live/nurmakonhotel.com/privkey.pem:/etc/nginx/ssl/privkey.pem:ro
+
       - ./ssl:/etc/nginx/ssl
     depends_on:
       app:
