--- a/nginx.conf
+++ b/nginx.conf
@@ -34,9 +34,13 @@ http {
     }
 
     server {
-        listen 80;
-        server_name localhost;
-
+         listen 80;
+   	 listen 443 ssl;
+    	 server_name nurmakonhotel.com;
+    
+   	 ssl_certificate /etc/letsencrypt/live/nurmakonhotel/fullchain.pem;
+   	 ssl_certificate_key /etc/letsencrypt/live/nurmakonhotel/privkey.pem;
+    
         # Security headers
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-XSS-Protection "1; mode=block" always;
