--- a/nginx.conf
+++ b/nginx.conf
@@ -19,13 +19,11 @@ http {
     keepalive_timeout 65;
     types_hash_max_size 2048;
 
-    # Gzip compression
     gzip on;
     gzip_vary on;
     gzip_min_length 1024;
-    gzip_types text/plain text/css text/xml text/javascript application/javascript application/xml+rss application/json;
+    gzip_types text/plain text/css text/xml text/javascript application/javascript;
 
-    # Rate limiting
     limit_req_zone $binary_remote_addr zone=api:10m rate=10r/s;
     limit_req_zone $binary_remote_addr zone=general:10m rate=1r/s;
 
@@ -35,24 +33,28 @@ http {
 
     server {
         listen 80;
+        server_name nurmakonhotel.com;
+
+        return 301 https://$host$request_uri;
+    }
+
+    server {
         listen 443 ssl;
         server_name nurmakonhotel.com;
-    
+
         ssl_certificate /etc/letsencrypt/live/nurmakonhotel/fullchain.pem;
         ssl_certificate_key /etc/letsencrypt/live/nurmakonhotel/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers on;
         ssl_ciphers HIGH:!aNULL:!MD5;
-       
-        # Security headers
+
         add_header X-Frame-Options "SAMEORIGIN" always;
         add_header X-XSS-Protection "1; mode=block" always;
         add_header X-Content-Type-Options "nosniff" always;
         add_header Referrer-Policy "no-referrer-when-downgrade" always;
-        add_header Content-Security-Policy "default-src 'self' http: https: data: blob: 'unsafe-inline'" always;
+        add_header Content-Security-Policy "default-src 'self' http: https: data:";
 
-        # API routes with rate limiting
         location /api/ {
             limit_req zone=api burst=20 nodelay;
             proxy_pass http://app;
@@ -69,7 +71,6 @@ http {
             proxy_read_timeout 60s;
         }
 
-        # Static files and app routes
         location / {
             limit_req zone=general burst=10 nodelay;
             proxy_pass http://app;
@@ -83,7 +84,6 @@ http {
             proxy_cache_bypass $http_upgrade;
         }
 
-        # Health check endpoint
         location /health {
             access_log off;
             return 200 "healthy\n";
