--- a/nginx.conf
+++ b/nginx.conf
@@ -42,8 +42,8 @@ http {
         listen 443 ssl;
         server_name nurmakonhotel.com;
 
-        ssl_certificate /etc/letsencrypt/live/nurmakonhotel/fullchain.pem;
-        ssl_certificate_key /etc/letsencrypt/live/nurmakonhotel/privkey.pem;
+        ssl_certificate /etc/nginx/ssl/fullchain.pem;
+        ssl_certificate_key /etc/nginx/ssl/privkey.pem;
 
         ssl_protocols TLSv1.2 TLSv1.3;
         ssl_prefer_server_ciphers on;
